# streamlit-app-read-example

./: .gitignore  Makefile  README.md  pyproject.toml  streamlit_app.py
.streamlit/: secrets-sample.toml
